--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,11 @@
-<h1>Cats!</h1>
+<h1>Burgers!</h1>
 
-<h2>Cats that are not sleepy!</h2>
+<h2>Burgers to eat</h2>
 
 <ul>
-  {{#each cats}}
+  {{#each burgers}}
     {{#unless sleepy}}
-      {{> cats/cat-block sleep=true}}
+      {{> burgers/burger-block sleep=true}}
     {{/unless}}
   {{/each}}
 </ul>
@@ -13,18 +13,18 @@
 <h2>Cats that are sleepy!</h2>
 
 <ul>
-  {{#each cats}}
+  {{#each burgers}}
     {{#if sleepy}}
-      {{> cats/cat-block sleep=false}}
+      {{> burgers/burger-block sleep=false}}
     {{/if}}
   {{/each}}
 </ul>
 
-<h2>Add a Cat</h2>
+<h2>Add a burger</h2>
 <form class="create-form">
 
   <div class="form-group">
-    <label for="ca">Cat Name:</label>
+    <label for="ca">Burger Name:</label>
     <input type="text" id="ca" name="name">
   </div>
 
@@ -34,5 +34,5 @@
     <input type="radio" name="sleepy" value="0"> Awake
   </div>
 
-  <button type="submit">Add Cat</button>
+  <button type="submit">Add Burger</button>
 </form>
