--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,8 +14,8 @@
 
 <ul>
   {{#each burgers}}
-    {{#if sleepy}}
-      {{> burgers/burger-block sleep=false}}
+    {{#if devoured}}
+      {{> burgers/burger-block devour=false}}
     {{/if}}
   {{/each}}
 </ul>
@@ -25,13 +25,13 @@
 
   <div class="form-group">
     <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" name="name">
+    <input type="text" id="ca" burger_name="name">
   </div>
 
   <div class="form-group">
-    <label for="sleepy">Sleepy?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
-    <input type="radio" name="sleepy" value="0"> Awake
+    <label for="devoured">Devour?</label><br>
+    <input type="radio" burger_name="devoured" value="1" checked> Devoured!<br>
+    <input type="radio" burger_name="devoured" value="0"> Awake
   </div>
 
   <button type="submit">Add Burger</button>
