--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,13 +4,13 @@
 
 <ul>
   {{#each burgers}}
-    {{#unless sleepy}}
-      {{> burgers/burger-block sleep=true}}
+    {{#unless devoured}}
+      {{> burgers/burger-block devoured=true}}
     {{/unless}}
   {{/each}}
 </ul>
 
-<h2>Cats that are sleepy!</h2>
+<h2>Burgers that are devoured!</h2>
 
 <ul>
   {{#each burgers}}
