--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,15 @@
 <h1>Burgers!</h1>
 
 <h2>Burgers to eat</h2>
+<ul>
+  {{#each burgers}}
+    {{#if devoured}}
+      {{> burgers/burger-block devour=false}}
+    {{/if}}
+  {{/each}}
+</ul>
 
+<h2>Burgers that are devoured!</h2>
 <ul>
   {{#each burgers}}
     {{#unless devoured}}
@@ -10,15 +18,7 @@
   {{/each}}
 </ul>
 
-<h2>Burgers that are devoured!</h2>
 
-<ul>
-  {{#each burgers}}
-    {{#if devoured}}
-      {{> burgers/burger-block devour=false}}
-    {{/if}}
-  {{/each}}
-</ul>
 
 <h2>Add a burger</h2>
 <form class="create-form">
@@ -29,9 +29,9 @@
   </div>
 
   <div class="form-group">
-    <label for="devoured">Devour?</label><br>
-    <input type="radio" burger_name="devoured" value="1" checked> Devoured!<br>
-    <input type="radio" burger_name="devoured" value="0"> Awake
+    <label for="devoured">Devour that bit</label><br>
+    <input type="radio" burger_name="devoured" value="1" checked> Add Burger!<br>
+    {{!-- <input type="radio" burger_name="devoured" value="0"> Awake --}}
   </div>
 
   <button type="submit">Add Burger</button>
