--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,8 +2,8 @@
 	{{burger_name}}
 
 	<button class="change-devour" data-id="{{id}}" data-newdevour="{{devour}}">
-		{{#unless devour}}Eat!
-		{{else}}Done
+		{{#unless devour}}Eat
+		{{else}} Eaten
 		{{/unless}}
 	</button>
 
