--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,42 @@
-<h1>Burgers!</h1>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Eat The Burger</h1>
+    <p class="lead">Welcome to the year 2060! We now eat food by clicking. Reality is a simulation. Food was a lie.</p>
+  </div>
+</div>
 
-<h2>Burgers to eat</h2>
+<div class= "container" id="inputforburger">
+<div class="row" id="form">
+  <div class="row">
+    <div class="col-md">
+<h4>Still Hungry? That's weird.... try another...</h4>
+
+<form class="create-form">
+
+  <div class="form-group">
+    <label for="ca">Burger Name:</label>
+    <input type="text" id="ca" burger_name="burger_name">
+  </div>
+
+  <div class="form-group">
+    <label for="devoured">Devour it</label><br>
+    <input type="radio" burger_name="devoured" value="1" checked> Add "Burger"!<br>
+  </div>
+
+  <button type="submit" class="btn btn-dark">Add "Burger"</button>
+</form>
+</div>
+</div>
+</div>
+</div>
+<br>
+
+
+
+<div class= "container">
+  <div class= "row">
+    <div class="col-sm">
+<h2>Delicious and totally real burgers</h2>
 <ol>
   {{#each burgers}}
     {{#if devoured}}
@@ -8,7 +44,9 @@
     {{/if}}
   {{/each}}
 </ol>
+</div>
 
+<div class="col-sm">
 <h2>Burgers that are devoured!</h2>
 <ol>
   {{#each burgers}}
@@ -19,22 +57,11 @@
     {{/unless}}
   {{/each}}
 </ol>
+</div>
+
+</div>
+</div>
 
 
 
-<h2>Add a burger</h2>
-<form class="create-form">
 
-  <div class="form-group">
-    <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" burger_name="burger_name">
-  </div>
-
-  <div class="form-group">
-    <label for="devoured">Devour that bit</label><br>
-    <input type="radio" burger_name="devoured" value="1" checked> Add Burger!<br>
-    {{!-- <input type="radio" burger_name="devoured" value="0"> Awake --}}
-  </div>
-
-  <button type="submit">Add Burger</button>
-</form>
