--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,9 +1,8 @@
 <li>
 	{{burger_name}}
 
-	<button class="change-devour" data-id="{{id}}" data-newdevour="{{devour}}">
+	<button class="change-devour btn btn-dark" data-id="{{id}}" data-newdevour="{{devour}}">
 		{{#unless devour}}Eat
-		{{else}} Eaten
 		{{/unless}}
 	</button>
 
