--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,10 @@
 <div class="jumbotron jumbotron-fluid">
-  <div class="container">
+
+  <div class="jumbotron-background">
+    <img src="../public/images/cyborgburger2.jpg" class="blur ">
+  </div>
+
+  <div class="container text-white">
     <h1 class="display-4">Eat The Burger</h1>
     <p class="lead">Welcome to the year 2060! We now eat food by clicking. Reality is a simulation. Food was a lie.</p>
   </div>
