--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,6 @@
 <div class="jumbotron jumbotron-fluid">
 
-  <div class="jumbotron-background">
-    <img src="../public/images/cyborgburger2.jpg" class="blur ">
-  </div>
-
-  <div class="container text-white">
+  <div class="container">
     <h1 class="display-4">Eat The Burger</h1>
     <p class="lead">Welcome to the year 2060! We now eat food by clicking. Reality is a simulation. Food was a lie.</p>
   </div>
@@ -14,7 +10,7 @@
 <div class="row" id="form">
   <div class="row">
     <div class="col-md">
-<h5>Still Hungry? That's weird.... try another...</h5>
+<h5>Still Hungry? That's weird.... you've eaten so many burgers... </h5>
 
 <form class="create-form">
 
@@ -25,7 +21,7 @@
 
   <div class="form-group">
     <label for="devoured">Devour it</label><br>
-    <input type="radio" burger_name="devoured" value="1" checked> Add "Burger"!<br>
+    <input type="radio" burger_name="devoured" value="1" checked> Add "Burger" You have no choice here! Sorry, what?<br>
   </div>
 
   <button type="submit" class="btn btn-dark">Add "Burger"</button>
