--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -37,7 +37,7 @@
 <div class= "container">
   <div class= "row">
     <div class="col-sm">
-<h2>Delicious and totally real burgers</h2>
+<h2>Delicious real burgers that will satisfy you more than love</h2>
 <ol>
   {{#each burgers}}
     {{#if devoured}}
@@ -48,7 +48,7 @@
 </div>
 
 <div class="col-sm">
-<h2>Burgers that are devoured!</h2>
+<h2>Please 4309XI329 go back and try some more. You have limitless options!</h2>
 <ol>
   {{#each burgers}}
     {{#unless devoured}}
