--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -54,6 +54,7 @@
     {{#unless devoured}}
     <li>
       {{burger_name}}
+      <button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
       </li>
     {{/unless}}
   {{/each}}
