finished delete btn

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -54,7 +54,7 @@
     {{#unless devoured}}
     <li>
       {{burger_name}}
-      <button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
+      <button class="delete-burger btn btn-dark" data-id="{{this.id}}">DELETE!</button>
       </li>
     {{/unless}}
   {{/each}}
